--- a/Assignment 1/plan.html
+++ b/Assignment 1/plan.html
@@ -24,6 +24,6 @@
 <h2>Site Flowchart (Structure Diagram)</h2>
 <p><img src="FlowchartAssignment1CP1406.png" width="900" height="315" alt="Flowchart"></p>
 <h2>GitHub Repository</h2>
-<p><a href="https://github.com/michaelamp/assignment1diggervolleyball.git">https://github.com/michaelamp/assignment1diggervolleyball.git</a></p>
+<p><a href="https://github.com/michaelamp/assignment1diggervolleyball/tree/master/Assignment%201">https://github.com/michaelamp/assignment1diggervolleyball/tree/master/Assignment%201</a></p>
 </body>
 </html>
